# Xviewer

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
login/: .uri  Cargo.toml
login/src/: lib.rs  main.rs
login/src/controllers/: header.rs
login/ui/: app.slint  borderless-window.slint
login/ui/blocks/: header.slint
src/: lib.rs  main.rs
ui/: desktop_window.slint  images.slint
ui/blocks/: header.slint
ui/pages/: guestos.slint  login.slint  pages.slint
ui/widgets/: page_scroll_view.slint
