[package]
name = "xview_lander"
description = "iCS desktop client."
version = "0.1.0"
authors = ["noone <mgr@xcodes.com.cn>"]
readme = "README.md"
repository = "https://github.com/xcodes2cn/Xviwer"
publish = false
edition = "2021"
rust-version = "1.77.1"
build = "build.rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.13.0"
slint = { path = "../slint/api/rs/slint", default-features = false, features = ["compat-1-2"] }
chrono = { version = "0.4.34", optional = true, default-features = false, features = ["clock", "std", "wasmbind"] }
weer_api = { version = "0.1", optional = true }
tokio = { version = "1.25", optional = true, features = ["full"] }
futures = { version = "0.3.26", optional = true }

[dependencies.redis]
version = "0.21.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"


[build-dependencies]
slint-build = { path = "../slint/api/rs/build" }

[features]
default = ["slint/default", "network", "chrono", "slint/backend-android-activity-05"]
simulator = ["slint/renderer-software", "slint/backend-winit", "slint/std"]
network = ["dep:weer_api", "tokio", "futures"]
